--- a/lib/word_battle_web/templates/layout/root.html.heex
+++ b/lib/word_battle_web/templates/layout/root.html.heex
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="icon" href={Routes.static_path(@conn, "/favicon.png")} />
+    <title>Word Battle</title>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "WordBattle", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
