--- a/lib/word_battle_web/templates/layout/root.html.heex
+++ b/lib/word_battle_web/templates/layout/root.html.heex
@@ -8,6 +8,7 @@
     <title>Word Battle</title>
     <%= csrf_meta_tag() %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
+    <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/tailwind.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
