show node name by its REGION env variable

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -14,4 +14,5 @@
 # Set the release to work across nodes.
 ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
 export RELEASE_DISTRIBUTION=name
-export RELEASE_NODE=$FLY_APP_NAME-$FLY_REGION@$ip
+export RELEASE_NODE=$FLY_APP_NAME@$ip
+export REGION=$FLY_REGION
