--- a/lib/word_battle_web/templates/layout/root.html.heex
+++ b/lib/word_battle_web/templates/layout/root.html.heex
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="icon" href={Routes.static_path(@conn, "/favicon.png")} />
+		<link rel="icon" href="/favicon.png" />
     <title>Word Battle</title>
     <%= csrf_meta_tag() %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
