--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -13,6 +13,8 @@
 
 # Set the release to work across nodes.
 ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
+ip=${ip:-$PHX_HOST}
+
 export RELEASE_DISTRIBUTION=name
 export RELEASE_NODE=$FLY_APP_NAME@$ip
 export REGION=$FLY_REGION
